--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="black">#121212</color>
     <color name="yellow">#FFD700</color>
-    <color name="grey">#C4C4C4</color>
+    <color name="grey">#41403d</color>
+    <color name="unselected">#FFFCEB</color>
 </resources>
