--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="black">#121212</color>
-    <color name="yellow">#FFD700</color>
-    <color name="grey">#41403d</color>
-    <color name="unselected">#FFFCEB</color>
+    <color name="colorPrimary">#212d3b</color>
+    <color name="colorPrimaryDark">#161d27</color>
+    <color name="colorRating">#FBC02D</color>
+    <color name="colorAccent">#52a2f7</color>
+    <color name="colorDark">#414449</color>
 </resources>
